WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112394
WebKit doesn't build Tools/GtkLauncher/Programs_GtkLauncher-main.o if --disable-video due to missing gstreamer flags
https://bugs.webkit.org/show_bug.cgi?id=112394
Summary
WebKit doesn't build Tools/GtkLauncher/Programs_GtkLauncher-main.o if --disab...
Tobias Mueller
Reported
2013-03-14 17:01:26 PDT
WebKit doesn't build Tools/GtkLauncher/Programs_GtkLauncher-main.o if --disable-video due to missing gstreamer flags
Attachments
Patch guarding gst header inclusion and gst function usage
(1.49 KB, patch)
2013-03-14 17:17 PDT
,
Tobias Mueller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tobias Mueller
Comment 1
2013-03-14 17:17:34 PDT
Created
attachment 193208
[details]
Patch guarding gst header inclusion and gst function usage WebKit was configured with the following options: $ ./autogen.sh --prefix /opt/gnome2 --libdir /opt/gnome2/lib64 --enable-introspection --with-gstreamer=1.0 --disable-static --disable-scrollkeeper --disable-gtk-doc --disable-docs --enable-gtk-doc=no --enable-gtk-doc-html=no --enable-gtk-doc-pdf=no --enable-webkit1 --disable-spellcheck --disable-glx --disable-egl --disable-gles2 --disable-gamepad --disable-video --disable-mediastream --enable-xslt --disable-geolocation --disable-svg --disable-svg-fonts --disable-web-audio --disable-coverage --disable-webgl --disable-gtk-doc-html --disable-accelerated-compositing Build configuration: Enable debugging (slow) : no Compile with debug symbols (slow) : no Enable GCC build optimization : yes Code coverage support : no Optimized memory allocator : yes Accelerated rendering backend : opengl(gl) Features: ======= WebKit1 support : yes WebKit2 support : yes Accelerated Compositing : no Gamepad support : no Geolocation support : no HTML5 video element support : no JIT compilation : autodetect Opcode stats : no SVG fonts support : no SVG support : no Spellcheck support : no Web Audio support : no WebGL : no GTK+ configuration: GTK+ version : 3.0 GDK target : x11 Introspection support : yes Generate documentation : no CC Tools/GtkLauncher/Programs_GtkLauncher-LauncherInspectorWindow.o CC Tools/GtkLauncher/Programs_GtkLauncher-main.o CC Tools/MiniBrowser/gtk/Programs_MiniBrowser-BrowserCellRendererVariant.o Tools/GtkLauncher/main.c:31:21: fatal error: gst/gst.h: No such file or directory compilation terminated. make[1]: *** [Tools/GtkLauncher/Programs_GtkLauncher-main.o] Error 1 make[1]: *** Waiting for unfinished jobs.... make[1]: Leaving directory `/tmp/wk-noting-but-wk1' make: *** [all] Error 2 gcc -DHAVE_CONFIG_H -I. -I./Source/WebKit/gtk -I./Source/WebCore/platform/network/soup/cache/ -I./Source/WebKit/gtk -I./DerivedSources -DWEBKIT_EXEC_PATH=\"/home/muelli/svn/gnome2/WebKit/./Programs/\" -Wall -W -Wcast-align -Wchar-subscripts -Wreturn-type -Wformat -Wformat-security -Wno-format-y2k -Wundef -Wmissing-format-attribute -Wpointer-arith -Wwrite-strings -Wno-unused-parameter -Wno-parentheses -fno-exceptions -DBUILDING_CAIRO__ -DBUILDING_GTK__ -DBUILDING_WEBKIT2__ -I./Source -I./Source/JavaScriptCore -I./Source/JavaScriptCore/API -I./Source/JavaScriptCore/assembler -I./Source/JavaScriptCore/bytecode -I./Source/JavaScriptCore/bytecompiler -I./Source/JavaScriptCore/dfg -I./Source/JavaScriptCore/disassembler -I./Source/JavaScriptCore/heap -I./Source/JavaScriptCore/debugger -I./Source/JavaScriptCore/ForwardingHeaders -I./Source/JavaScriptCore/interpreter -I./Source/JavaScriptCore/jit -I./Source/JavaScriptCore/jit -I./Source/JavaScriptCore/llint -I./Source/JavaScriptCore/parser -I./Source/JavaScriptCore/profiler -I./Source/JavaScriptCore/runtime -I./Source/JavaScriptCore/tools -I./Source/JavaScriptCore/yarr -I./DerivedSources/JavaScriptCore -I./Source/WTF -ansi -fno-strict-aliasing -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -I/opt/gnome2/include/harfbuzz -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng15 -pthread -I/opt/gnome2/include/gtk-3.0 -I/opt/gnome2/include/atk-1.0 -I/opt/gnome2/include/at-spi2-atk/2.0 -I/opt/gnome2/include/pango-1.0 -I/opt/gnome2/include/gio-unix-2.0/ -I/opt/gnome2/include/gdk-pixbuf-2.0 -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -I/opt/gnome2/include/harfbuzz -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng15 -pthread -I/opt/gnome2/include/libsoup-2.4 -I/opt/gnome2/include/libxml2 -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -std=c99 -O2 -MT Tools/GtkLauncher/Programs_GtkLauncher-main.o -MD -MP -MF Tools/GtkLauncher/.deps/Programs_GtkLauncher-main.Tpo -c -o Tools/GtkLauncher/Programs_GtkLauncher-main.o `test -f 'Tools/GtkLauncher/main.c' || echo './'`Tools/GtkLauncher/main.c mv -f Tools/DumpRenderTree/gtk/.deps/Programs_DumpRenderTree-TextInputController.Tpo Tools/DumpRenderTree/gtk/.deps/Programs_DumpRenderTree-TextInputController.Po Tools/GtkLauncher/main.c:31:21: fatal error: gst/gst.h: No such file or directory compilation terminated. make[1]: *** [Tools/GtkLauncher/Programs_GtkLauncher-main.o] Error 1 Note that gstreamer was not installed. With the patch attached it builds fine. Interestingly though, I couldn't find any other user of WTF_USE_GSTREAMER.
Philippe Normand
Comment 2
2013-03-15 00:11:14 PDT
Comment on
attachment 193208
[details]
Patch guarding gst header inclusion and gst function usage Thanks!
WebKit Review Bot
Comment 3
2013-03-15 00:16:08 PDT
Comment on
attachment 193208
[details]
Patch guarding gst header inclusion and gst function usage Clearing flags on attachment: 193208 Committed
r145881
: <
http://trac.webkit.org/changeset/145881
>
WebKit Review Bot
Comment 4
2013-03-15 00:16:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug