Build fix for Tools/GtkLauncher/Programs_GtkLauncher-main.o if gstreamer is not installed https://bugs.webkit.org/show_bug.cgi?id=112394

Patch by Tobias Mueller <tobiasmue@gnome.org> on 2013-03-15
Reviewed by Philippe Normand.

* GtkLauncher/main.c:
(main): Guard using the gstreamer function with #ifdef WTF_USE_GSTREAMER

git-svn-id: svn://svn.chromium.org/blink/trunk@145881 bbb929c8-8fbe-4397-9dbb-9b2b20218538